...
  "Restaurant/Cafe",
  "Pub/Night Club",
  "Clinic",
];
const buildingTypeArray = [
  "Businesses Park ",
  "Mall",
  "StandAlone",
  "Industrial",
  "Shopping Complex",
  "Commersial Complex"
];
const idealForArrayDict = [
...
  { name: "Showroom", checked: false },
  { name: "Godown", checked: false },
  { name: "Clinic", checked: false }
];

const parkingTypeArray = ["Public", "Private", "Both"];
const propertyAgeArray = ["1-5", "6-10", "11-15", "20+"];
const powerBackupkArray = ["Yes", "No"];


const COMMERCIAL_PROPERTY_TYPE_OPTION = [
  { text: 'Shop' },
  { text: 'Office' },
...
    } else {
      var filteredAry = idealForSelectArray.filter(e => e !== temp[index].name);
      setIdealForSelectArray(filteredAry);
    }
  };

  return (
    <View style={{ flex: 1, backgroundColor: "rgba(245,245,245, 0.2)" }}>
      <KeyboardAwareScrollView onPress={Keyboard.dismiss}>
        <ScrollView style={styles.container}>
          <View style={{ paddingTop: 30, marginLeft: 10, marginRight: 0 }}>
            <Text>Property Type*</Text>
            <View style={styles.propSubSection}>
...
                  }}
                />

            
            </View>

            <Text>Parkings</Text>
            <View style={styles.doubleColSection}>
            <CustomButtonGroup
                buttons={AppConstant.COMMERCIAL_PARKING_OPTION}
                accessibilityLabelId="commercial_parking_type"
                selectedIndices={[AppConstant.COMMERCIAL_PARKING_OPTION.findIndex(option => option.text === parkingType)]}
                isMultiSelect={false}
...
            <TextInput
              mode="outlined"
              style={styles.inputContainerStyle}
              label="Property Size*"
              keyboardType={"numeric"}
              returnKeyType={"done"}
              placeholder="Property Size"
              value={propertySize}
              // keyboardType={"numeric"}
              onChangeText={text => setPropertySize(text)}
              onFocus={() => setIsVisible(false)}
              theme={{
                colors: {
...
                  background: "#ffffff"
                }
              }}
            />

            <View style={{ marginTop: 15 }}>
              <Button title="NEXT" onPress={() => onSubmit()} />
            </View>
          </View>
        </ScrollView>
      </KeyboardAwareScrollView>
      <Snackbar
        visible={isVisible}
        textMessage={errorMessage}
        position={"top"}
        actionHandler={() => dismissSnackBar()}
        actionText="OK"
      />
    </View>
  );
};

const styles = StyleSheet.create({
...
