export const EMPLOYEE_ROLE = ["add", "master", "admin"]// this is who can add employee
export const EMPLOYEE_ROLE_DELETE = ["admin"]
export const RENT = "Rent";
export const SELL = "Sell";
export const BUY = "Buy";
export const RESIDENTIAL = "Residential";
export const COMMERCIAL = "Commercial";
export const PROPERTY = "Property";
export const CUSTOMER = "Customer";
export const CONTACT = "Contact";
export const REMINDER = "Reminder";
export const MEETING = "Meeting";
export const BHK = {
...
    { text: 'Godown' },
];

export const COMMERCIAL_PROPERTY_BUILDING_TYPE_OPTION = [

    { text: 'Businesses Park' },
    { text: 'Mall' },
    { text: 'StandAlone' },
    { text: 'Industrial' },
    { text: 'Shopping Complex' },
    { text: 'Commersial Complex' }
];

...
