...
      <Tab.Screen
        // lazy={false}
        name="ListingStack"
        component={ListingStack}
        title="My Properties"
        options={{
          tabBarAccessibilityLabel: "bottom_tab_properties_icon",
          tabBarLabel: "",
          tabBarColor: "#ffffff",
          tabBarIcon: ({ focused }) => (
            <MaterialCommunityIcons
              name="view-grid-outline"
              color={focused ? 'rgba(63, 195, 128, 1)' : '#828282'}
...
