appId: com.realtoapp.ios
---
- tapOn: "bottom_tab_properties_icon"
- assertVisible: "Residential"
- tapOn: "Commercial"
- assertVisible: "Commercial"
- tapOn:
    id: "ref_id_909779"
- assertVisible: "Sell Off In CSP1 Building 1, CSP1 Landmark 1"
- assertVisible: "Juhu Beach, Maharashtra, India"
- assertVisible: "Shop"
- assertVisible: "3 Cr"
- assertVisible: "Mall"
- assertVisible: "500sqft"
- assertVisible: "Details"
- assertVisible: "Negotiable"
- assertVisible: "Parking"
- assertVisible: "Possession"
- assertVisible: "Age Of Building"
- assertVisible: "Ideal For"
- assertVisible: "Power Backup"
- tapOn:
    id: "owner_accordion"
- scrollUntilVisible:
    element:
      text: "Past Meetings"
    direction: down
    visibilityPercentage: 100
    timeout: 10000
- assertVisible: "CSP1"
- assertVisible: "+91 9833044441"
- assertVisible: "Juhu Mumbai"
- assertVisible:
    id: "owner_phone"
- assertVisible: "Upcoming Meetings"
- assertVisible: "Past Meetings"

- tapOn: "Go back"


- scrollUntilVisible:
    element:
      id: "end_of_list"
    direction: down
    visibilityPercentage: 100
    timeout: 10000
- tapOn:
    id: "ref_id_056863"

- assertVisible: "Rent in CRP1 Building 1, CRP1 Landmark 1"
- assertVisible: "Juhu Beach, Maharashtra, India"
- assertVisible: "Shop"
- assertVisible: "30 K"
- assertVisible: "1.5 Lac"
- assertVisible: "500sqft"
- assertVisible: "Details"
- assertVisible: "Building Type"
- assertVisible: "Parking"
- assertVisible: "Possession"
- assertVisible: "Age Of Building"
- assertVisible: "Ideal For"
- assertVisible: "Power Backup"
- tapOn:
    id: "owner_accordion"
- scrollUntilVisible:
    element:
      text: "Past Meetings"
    direction: down
    visibilityPercentage: 100
    timeout: 10000
- tapOn: "CRP1"
- tapOn: "+91 9833033331"
- tapOn: "Juhu Mumbai"
- assertVisible:
    id: "owner_phone"
- assertVisible: "Upcoming Meetings"
- assertVisible: "Past Meetings"

- tapOn: "Go back"